<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_FrameFifoEntrydata_2" Id="{f764c162-a77e-4d6f-9adf-7b2b14813948}">
    <Declaration><![CDATA[TYPE ST_FrameFifoEntrydata_2 :
STRUCT
	stRemoteAddr 	: ST_SockAddr;
	txdata : ARRAY[0..TXDATASIZE_2] OF BYTE; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>